2010-11-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/OpalText/CTGlyphInfo.m
	* Source/OpalText/CTFontDescriptor.m
	* Source/OpalText/CTFont.m
	* Source/OpalText/CTFramesetter.m
	* Source/OpalText/CTFontCollection.m
	* Tests/gradients.m
	* Tests/x11.m: Clean up line endings and remove some compiler warnings.

2010-02-11  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Source/GNUmakefile: Use := when setting ADDITIONAL_CPPFLAGS and
	ADDITIONAL_LDFLAGS to reduce the number of subshell invocations
	required to compile.
	* Tests/GNUmakefile: Same change for ADDITIONAL_LDFLAGS.