@@ -1,3 +1,7 @@
+2011-02-20 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/OpalGraphics/CGContext.m: Add CMYK colour methods.
+
 2010-11-15 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/OpalText/CTGlyphInfo.m
